--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dixonandmoe/tessarray.git"
-  },
+  "repository": "git+https://github.com/dixonandmoe/tessarray.git",
   "keywords": [
     "layout",
     "sort",
     "size",
     "responsive"
   ],
-  "author": "Mark Janzer <test@email.com> (https://dixonandmoe.com/)",
+  "author": "Mark Janzer <mark@dixonandmoe.com> (https://dixonandmoe.com/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/dixonandmoe/tessarray/issues"
   },
-  "homepage": "https://github.com/dixonandmoe/tessarray#readme"
+  "homepage": "https://github.com/dixonandmoe/tessarray#readme",
+  "dependencies": {
+    "justified-layout": "2.1.1"
+  }
 }
