--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,4 @@
 # or operating system, you probably want to add a global ignore instead:
 # git config --global core.excludesfile '~/.gitignore_global'
 
-# Ignore images
-/images
-
-# Justified Files
-justified-layout.min.js
+/dist
